# escrow-fx-marketplace

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260319_0001_initial_foundation.py  20260319_0002_add_user_password_hash.py  20260404_0003_add_exchange_requests.py  20260404_0004_add_exchange_offers.py  20260404_0005_add_trade_contracts.py  20260418_0006_add_outbox_events.py  20260510_0007_add_email_verification.py  20260510_0008_add_password_reset_tokens.py  20260516_0009_add_kyc_verifications.py  20260628_0010_add_kyc_review_events.py
app/: __init__.py  bootstrap_admin.py  dispatch_notifications.py  expire_marketplace.py  main.py  reconcile_kyc.py  seed_reference_data.py
app/api/: admin_routes.py  auth_routes.py  corridor_routes.py  currency_routes.py  dependencies.py  exception_handlers.py  exchange_request_routes.py  kyc_routes.py  offer_routes.py  router.py  routes.py  trade_routes.py  user_routes.py  webhook_routes.py
app/domain/: __init__.py  auth.py  entities.py  enums.py  exceptions.py  value_objects.py
app/infrastructure/: __init__.py  config.py  exceptions.py  request_context.py  security.py
app/integrations/: __init__.py  knock.py  youverify.py
app/models/: __init__.py  base.py  corridor.py  currency.py  user.py  (+7 more)
docs/: escrow-plan.md
tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_bootstrap_admin.py  test_exception_handlers.py  test_exchange_offers_api.py  test_exchange_requests_api.py  test_health.py  test_kyc_api.py  test_marketplace_expiry.py  test_migrations.py  test_notification_dispatcher.py  test_reference_data_api.py  test_repositories.py  test_seed_reference_data.py  test_trades_api.py  test_youverify_integration.py
(+29 files in other folders)
